--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: hsl(249, 45%, 35%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,7 +20,7 @@ a {
 }
 
 a:hover {
-  color: #535bf2;
+  color: #f2538d;
 }
 
 body {
@@ -33,32 +33,6 @@ body {
   padding-left: 50px;
 
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  color: #0b385f;
-  animation: tracking-in-contract-bck-bottom 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-
-}
-
-@keyframes tracking-in-contract-bck-bottom {
-  0% {
-    letter-spacing: 1em;
-    transform: translateZ(400px) translateY(300px);
-    opacity: 0;
-  }
-
-  40% {
-    opacity: 0.6;
-  }
-
-  100% {
-    transform: translateZ(0) translateY(0);
-    opacity: 1;
-  }
-}
-
 
 button {
   width: 180px;
@@ -75,13 +49,13 @@ button {
 }
 
 button:hover {
-  border: 1px solid #646cff;
+  border: 1px solid #c4255f;
 
 }
 
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 1px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
@@ -101,5 +75,5 @@ button:focus-visible {
 
 input:hover,
 input:focus {
-  border: 2px solid #430e99;
+  border: 1px solid #ae0e3b;
 }
